# pilot

./: .gitignore  AGENTS.md  Bugs et Evolutions.md  README.md  api.md  idees_evolutions.md  index.html  orchestration_V3.md  package-lock.json  package.json  plan_dev.md  spec_context_engine.md  spec_diff_review.md  spec_help.md  spec_orchestration.md  spec_orchestration_observability.md  spec_pdf2md.md  spec_pilot.md  spec_project_memory.md  spec_quality_gate.md  spec_review.md  spec_rpc.md  spec_voice_input.md  spec_web_remote.md  vite.config.js
.github/workflows/: release.yml
.pi/extensions/web-to-markdown/: README.md  index.ts  package-lock.json  package.json
.pi/skills/quality-gate/: SKILL.md
help/: handbook.md  overview.md
release-notes/: README.md  v0.2.14.md
scripts/: build-handbook.js  create-release.js  gen-latest-json.js  update-release-notes.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/extensions/: pilot-edit-gate.ts
src-tauri/icons/: icon.icns
src-tauri/skills/quality-gate/: SKILL.md
src-tauri/src/: help.rs  lib.rs  main.rs  review.rs  rpc_manager.rs  tailscale.rs  web_audit.rs  web_auth.rs  web_rate.rs  web_server.rs
src/css/: style.css
src/js/: agent-pi.js  backend-info.js  context-engine.js  csv-preview.js  diff-view.js  editor.js  file-list.js  help.js  icons.js  image-paste.js  image-viewer.js  inline-complete.js  languages.js  loading.js  main.js  orchestration.js  outline.js  pdf-export.js  pdf-preview.js  pdf-to-markdown.js  preview.js  project-memory.js  prompt-builder.js  review.js  search-panel.js  session-persistence.js  settings.js  sidebar.js  tabs.js  terminal.js  theme.js  toast.js  updater.js
templates/: resume_test.md
web/: index.html
web/css/: web.css
web/js/: app.js  files.js
