[package]
name = "pilot"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
pulldown-cmark = "0.12"
open = "5"
portable-pty = "0.8"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"

# ── Serveur web distant (mode remote) ──
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
argon2 = "0.5"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
sha2 = "0.10"
include_dir = "0.7"
qrcode = "0.14"
